--- a/NickAndArtie/NickAndArtie.csproj
+++ b/NickAndArtie/NickAndArtie.csproj
@@ -106,6 +106,7 @@
   <ItemGroup>
     <Compile Include="Controllers\ContactUsController.cs" />
     <Compile Include="Controllers\FindUsController.cs" />
+    <Compile Include="Controllers\GearController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MeetController.cs" />
     <Compile Include="Controllers\PodcastsController.cs" />
@@ -217,6 +218,7 @@
     <Content Include="Views\FindUs\Index.cshtml" />
     <Content Include="Views\Meet\Index.cshtml" />
     <Content Include="Views\ContactUs\Index.cshtml" />
+    <Content Include="Views\Gear\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
