--- a/NickAndArtie/NickAndArtie.csproj
+++ b/NickAndArtie/NickAndArtie.csproj
@@ -221,6 +221,7 @@
     <Content Include="Views\ContactUs\Index.cshtml" />
     <Content Include="Views\Gear\Index.cshtml" />
     <Content Include="Views\Shared\PodcastSmall.cshtml" />
+    <Content Include="Views\Shared\PodcastLarge.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
