--- a/NickAndArtie/Web.config
+++ b/NickAndArtie/Web.config
@@ -13,6 +13,9 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
+      <customErrors mode="Off">
+      <error statusCode="404" redirect="/Custom404.htm" />
+    </customErrors>
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
