--- a/NickAndArtie/NickAndArtie.csproj
+++ b/NickAndArtie/NickAndArtie.csproj
@@ -135,13 +135,16 @@
     <Content Include="public\images\devilscut_ad.jpg" />
     <Content Include="public\images\dq-lunch-lovers.png" />
     <Content Include="public\images\dq-oreo.png" />
+    <Content Include="public\images\facebook.png" />
     <Content Include="public\images\favicon.png" />
     <Content Include="public\images\footballica.png" />
+    <Content Include="public\images\footer_text.jpg" />
     <Content Include="public\images\fpo.png" />
     <Content Include="public\images\header_arrow_solid.png" />
     <Content Include="public\images\header_arrow_trans.png" />
     <Content Include="public\images\hitlisttype.png" />
     <Content Include="public\images\holiday-twee.png" />
+    <Content Include="public\images\homepage-background.jpg" />
     <Content Include="public\images\img_placeholder.jpg" />
     <Content Include="public\images\leap-for-loaves.png" />
     <Content Include="public\images\lincoln-center.png" />
@@ -152,11 +155,14 @@
     <Content Include="public\images\LogoGlow.png" />
     <Content Include="public\images\mCSB_buttons.png" />
     <Content Include="public\images\photohead.png" />
+    <Content Include="public\images\player-controls.jpg" />
+    <Content Include="public\images\player.jpg" />
     <Content Include="public\images\roadhead.png" />
     <Content Include="public\images\sidead.jpg" />
     <Content Include="public\images\slider-1.jpg" />
     <Content Include="public\images\sliderimage.jpg" />
     <Content Include="public\images\tvpodcasthead.png" />
+    <Content Include="public\images\twitter.png" />
     <Content Include="public\images\twitterhead.png" />
     <Content Include="public\images\v28.png" />
     <Content Include="public\images\v29.png" />
@@ -170,6 +176,7 @@
     <Content Include="public\javascripts\slides.min.jquery.js" />
     <Content Include="public\javascripts\tabs.js" />
     <Content Include="public\libraries\jPlayer\blue.monday\Copy of jplayer.blue.monday.css" />
+    <Content Include="public\libraries\jPlayer\blue.monday\Copy of jplayer.blue.monday.jpg" />
     <Content Include="public\libraries\jPlayer\blue.monday\jplayer.blue.monday.css" />
     <Content Include="public\libraries\jPlayer\blue.monday\jplayer.blue.monday.jpg" />
     <Content Include="public\libraries\jPlayer\blue.monday\jplayer.blue.monday.large.css" />
