--- a/NickAndArtie/NickAndArtie.csproj
+++ b/NickAndArtie/NickAndArtie.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Data.Entity.Design" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -230,6 +231,7 @@
     <Content Include="public\images\lincoln-center.png" />
     <Content Include="public\images\listen-live-btn.png" />
     <Content Include="public\images\listenlive.png" />
+    <Content Include="public\images\loading.gif" />
     <Content Include="public\images\logo-no-glow.png" />
     <Content Include="public\images\Logo.png" />
     <Content Include="public\images\LogoGlow.png" />
@@ -287,7 +289,6 @@
     <Content Include="public\libraries\ScrollBar\jquery.mousewheel.min.js" />
     <Content Include="public\libraries\ScrollBar\mCSB_buttons.png" />
     <Content Include="public\libraries\twitter\index.css" />
-    <Content Include="public\libraries\twitter\index.html" />
     <Content Include="public\libraries\twitter\jquery.tweet.css" />
     <Content Include="public\libraries\twitter\jquery.tweet.js" />
     <Content Include="public\stylesheets\base.css" />
