--- a/NickAndArtie/NickAndArtie.csproj
+++ b/NickAndArtie/NickAndArtie.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>NickAndArtie</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -476,7 +476,9 @@
     <Content Include="streaming-player\wimpy.php" />
     <Content Include="streaming-player\wimpy.swf" />
     <Content Include="streaming-player\wimpy_reg.txt" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -501,6 +503,8 @@
   <ItemGroup>
     <None Include="Properties\PublishProfiles\NickAndArtieMVC - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\NickAndArtieMVC - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\nickandartietest - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nickandartietest - Web Deploy.pubxml" />
     <None Include="public\libraries\jPlayer\blue.monday\jPlayer_blue.monday_extd.psd" />
     <None Include="public\libraries\jPlayer\blue.monday\spirites_blue.monday_2011.psd" />
     <Content Include="Views\Podcasts\Index.cshtml" />
@@ -547,6 +551,7 @@
     <Content Include="Views\ManageYoutubeVideos\Edit.cshtml" />
     <Content Include="Views\ManageYoutubeVideos\Delete.cshtml" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Podcasts\PopUp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201208251546287_Initial.resx">
@@ -591,12 +596,11 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>False</UseIIS>
+          <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>58443</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>
-          </IISUrl>
+          <IISUrl>http://localhost:58443/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
